# Chess-project

./: Board.cpp  Board.h  CMakeLists.txt  Figure.cpp  Figure.h  Game.cpp  Game.h  Position.cpp  Position.h  doctest.h  main.cpp  tests.cpp
